[gd_scene load_steps=9 format=2]

[ext_resource path="res://map/textures/objects/decors/table_2.png" type="Texture" id=1]
[ext_resource path="res://map/scenes/decorations/table.gd" type="Script" id=2]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/textures/buttons/btn_no.png" type="Texture" id=5]
[ext_resource path="res://areas/detect_right_click_area.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "button_fade"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Table" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 1 )

[node name="Area2D_Table" type="Area2D" parent="Sprite"]
collision_mask = 3
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Table"]
polygon = PoolVector2Array( -23, 2, -23, -10, -15, -17, -9, -20, -4, -22, 4, -22, 9, -20, 14, -17, 18, -14, 23, -9, 23, 5, 23, 11, 19, 18, 14, 24, -11, 24, -18, 18, -21, 10 )

[node name="Area2D_Table_1" type="Area2D" parent="Sprite"]
collision_mask = 3
script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Table_1"]
polygon = PoolVector2Array( -64, -1, 13, -40, 60, -17, 65, -8, 65, 7, -7, 46, -64, 16 )

[node name="Tween" type="Tween" parent="."]

[node name="GroupButtonRemove" type="Node2D" parent="."]
position = Vector2( 0, -35 )
z_index = 10

[node name="ButtonRemove" type="TextureButton" parent="GroupButtonRemove"]
visible = false
margin_left = -28.0
margin_top = -19.0
margin_right = 36.0
margin_bottom = 13.0
rect_scale = Vector2( 0.85, 0.85 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GroupButtonRemove/ButtonRemove"]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Remove"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GroupButtonRemove/ButtonRemove"]
autoplay = "button_fade"
anims/RESET = SubResource( 2 )
anims/button_fade = SubResource( 3 )

[connection signal="body_entered" from="Sprite/Area2D_Table" to="." method="_on_Area2D_Table_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Table" to="." method="_on_Area2D_Table_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Table_1" to="." method="_on_Area2D_Table_1_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Table_1" to="." method="_on_Area2D_Table_1_body_exited"]
